--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,19 @@
-title:            Site Title
+title:            Jesús Antonio Canales Diez
 description:      Describe your website here.
 disqus_shortname: 
 #Your site's domain goes here. Leave localhost server or blank when working locally.
-url:              http://localhost:4000
+url:              http://jacanales.github.io
 
 # Owner/author information
 owner:
-  name:           Your Name
+  name:           Jesús Antonio Canales Diez
   avatar:         avatar.jpg
   bio:            "Your bio goes here. It shouldn't be super long but a good two sentences or two should suffice."
-  email:          you@email.com
+  email:          jacanalesdiez@gmail.com
   # Social networking links used in footer. Update and remove as you like.
-  twitter:        
+  twitter:        https://twitter.com/tanque_tm
   facebook:       
-  github:         
+  github:         https://github.com/jacanales
   stackexchange:  
   linkedin:       
   instagram:      
@@ -36,12 +36,12 @@ bing_verify:
 links:
   - title: Theme Setup
     url: /theme-setup
-  - title: External Link
-    url: http://mademistakes.com
+  - title: ZonaDev
+    url: http://www.zonadev.es
     external: true
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-timezone:    America/New_York
+timezone:    Europe/Madrid
 future:      true
 highlighter: pygments
 markdown:    kramdown
