--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,17 @@
-_site
 .DS_Store
-*.sublime-project
-*.sublime-workspace
-codekit-config.json
-node_modules
+node_modules/
+/dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+/test/unit/coverage/
+/test/e2e/reports/
+selenium-debug.log
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
