--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "bulma": "^0.7.4",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
