--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bulma": "^0.8.0",
     "core-js": "^3.6.4",
     "html-webpack-plugin": "^3.2.0",
+    "jquery": "^3.4.1",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
