--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,4 +1,11 @@
 pull_request_rules:
+  - name: Automatic merge on dependabot requests
+    conditions:
+      - "author=dependabot-preview"
+      - "base=master"
+    actions:
+      merge:
+        method: merge
   - name: Automatic merge on approval
     conditions:
       - "#approved-reviews-by>=1"
