--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,7 +1,7 @@
 pull_request_rules:
   - name: Automatic merge on dependabot requests
     conditions:
-      - "author=dependabot-preview"
+      - "author=dependabot-preview[bot]"
       - "base=master"
     actions:
       merge:
