--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,8 +1,17 @@
 pull_request_rules:
   - name: Automatic merge on dependabot requests
     conditions:
-      - "author=dependabot-preview[bot]"
+      - "author=dependabot[bot]"
       - "base=master"
+      - check-success=Build and test
+    actions:
+      merge:
+        method: merge
+  - name: Automatic merge on mergify requests
+    conditions:
+      - "base=master"
+      - "head~=^mergify/"
+      - check-success=Build and test
     actions:
       merge:
         method: merge
