--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,3 +10,15 @@ updates:
   - jacanales
   assignees:
   - jacanales
+ # Maintain dependencies for GitHub Actions
+- package-ecosystem: "github-actions"
+  directory: "/"
+  schedule:
+    interval: "daily"
+    time: "04:00"
+  open-pull-requests-limit: 10
+  reviewers:
+  - jacanales
+  assignees:
+  - jacanales
+
