--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,6 +5,10 @@ updates:
   schedule:
     interval: weekly
     time: "04:00"
+  commit-message:
+    prefix: "chore"
+    prefix-development: "chore"
+    include: "scope"
   open-pull-requests-limit: 10
   reviewers:
   - jacanales
@@ -16,6 +20,10 @@ updates:
   schedule:
     interval: "daily"
     time: "04:00"
+  commit-message:
+    prefix: "chore"
+    prefix-development: "chore"
+    include: "scope"
   open-pull-requests-limit: 10
   reviewers:
   - jacanales
