--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@babel/eslint-parser": "^7.19.1",
     "bulma": "^0.9.4",
     "core-js": "^3.25.3",
     "html-webpack-plugin": "^5.5.0",
@@ -15,18 +16,18 @@
     "node-sass": "^6.0.1",
     "sass-loader": "^10.1.1",
     "vue": "^3.2.39",
-    "vue-router": "^4.1.5"
+    "vue-router": "4"
   },
   "peerDependencies": {
-    "webpack": "^5.2.0"
+    "webpack": "^5.74.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.8",
     "@vue/cli-plugin-eslint": "~5.0.8",
-    "@vue/cli-service": "~4.5.15",
+    "@vue/cli-service": "~5.0.8",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^7.20.0",
+    "eslint": "^8.24.0",
+    "eslint-plugin-vue": "^9.5.1",
     "vue-template-compiler": "^2.7.10"
   },
   "eslintConfig": {
@@ -39,7 +40,7 @@
       "eslint:recommended"
     ],
     "parserOptions": {
-      "parser": "babel-eslint"
+      "parser": "@babel/eslint-parser"
     },
     "rules": {}
   },
