--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "core-js": "^3.25.3",
     "html-webpack-plugin": "^5.5.0",
     "jquery": "^3.6.1",
-    "node-sass": "^6.0.1",
-    "sass-loader": "^10.1.1",
+    "sass": "^1.55.0",
+    "sass-loader": "^13.0.2",
     "vue": "^3.2.39",
     "vue-router": "4"
   },
