--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     "vite-plugin-vue-devtools": "^8.0.5",
     "vitest": "^4.0.15",
     "vue-tsc": "^3.1.7"
+  },
+  "engines": {
+    "node": ">=22.12.0"
   }
 }
