--- a/.github/workflows/check-npm-modules.yml
+++ b/.github/workflows/check-npm-modules.yml
@@ -6,5 +6,7 @@ jobs:
     name: Build and test
     steps:
       - uses: actions/checkout@v6
-      - uses: bahmutov/npm-install@v1.11.2
+      - uses: actions/setup-node@v6
+        with:
+          node-version: '22.12.0'
       - run: yarn build
