--- a/.github/workflows/check-npm-modules.yml
+++ b/.github/workflows/check-npm-modules.yml
@@ -9,4 +9,5 @@ jobs:
       - uses: actions/setup-node@v6
         with:
           node-version: '22.12.0'
-      - run: yarn build
+      - run: npm install
+      - run: npm run build
